--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     left: 0px;
     right: 0px;      
 }
-#box1, #box2 {
+#box1, #box2, #box3 {
 	background: linear-gradient(to bottom right, #aaaaaa, white);
 	border-radius: 5px;
 	width: 800px;
